test/corpus/features.txt
===================================
Attribute on a function declaration
===================================

#discard
do log(msg string) -> int {
    return 0
}

---

(source_file
  (function_declaration
    (attribute
      name: (identifier))
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (primitive_type))))
    (return_types
      (type
        (primitive_type)))
    (block
      (return_statement
        (number
          (integer))))))

====================
Type alias
====================

alias Meters = float
private alias InternalID = int

---

(source_file
  (alias_declaration
    name: (identifier)
    type: (type
      (primitive_type)))
  (alias_declaration
    name: (identifier)
    type: (type
      (primitive_type))))

==============================
else as an alias for otherwise
==============================

do main() {
    if x > 1 {
        println("a")
    } else {
        println("b")
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (if_statement
        (binary_expression
          (identifier)
          (number
            (integer)))
        (block
          (expression_statement
            (call_expression
              function: (identifier)
              (string
                (string_content)))))
        (otherwise_clause
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (string
                  (string_content))))))))))

==================================
Tagged enum variants with payloads
==================================

const Shape enum {
    Circle(float)
    Rect(float, float)
    Point
}

---

(source_file
  (enum_declaration
    name: (identifier)
    (enum_value
      (identifier)
      (variant_payload
        (type
          (primitive_type))))
    (enum_value
      (identifier)
      (variant_payload
        (type
          (primitive_type))
        (type
          (primitive_type))))
    (enum_value
      (identifier))))

====================
Type parameter
====================

do make(T <?>) -> ^? {
    return new(T)
}

---

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_parameter)))
    (return_types
      (type
        (pointer_type
          (type
            (wildcard_type)))))
    (block
      (return_statement
        (new_expression
          type: (type
            (identifier)))))))

===========================
Struct field default values
===========================

const Config struct {
    host string = "localhost"
    x, y int = 0
}

---

(source_file
  (struct_declaration
    name: (identifier)
    (field_declaration
      name: (identifier)
      type: (type
        (primitive_type))
      default: (string
        (string_content)))
    (field_declaration
      name: (identifier)
      name: (identifier)
      type: (type
        (primitive_type))
      default: (number
        (integer)))))

======================
Implicit enum selector
======================

do main() {
    mut dir Direction = .NORTH
    dir = .SOUTH
    when dir {
        is .NORTH { println("n") }
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (type
          (identifier))
        (implicit_selector
          variant: (identifier)))
      (assignment_statement
        (identifier)
        (implicit_selector
          variant: (identifier)))
      (when_statement
        (identifier)
        (is_clause
          (implicit_selector
            variant: (identifier))
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (string
                  (string_content))))))))))

==============================
Named arguments at a call site
==============================

do main() {
    connect(host: "localhost", verbose: true)
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (expression_statement
        (call_expression
          function: (identifier)
          (named_argument
            name: (identifier)
            value: (string
              (string_content)))
          (named_argument
            name: (identifier)
            value: (boolean)))))))

======================================
Multi-value declaration and assignment
======================================

do main() {
    mut a, b = pair()
    mut x int, y int = pair(1, 2)
    mut v, _ = get()
    c, d = pair()
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (identifier)
        (call_expression
          function: (identifier)))
      (variable_declaration
        (identifier)
        (type
          (primitive_type))
        (identifier)
        (type
          (primitive_type))
        (call_expression
          function: (identifier)
          (number
            (integer))
          (number
            (integer))))
      (variable_declaration
        (identifier)
        (identifier)
        (call_expression
          function: (identifier)))
      (assignment_statement
        (identifier)
        (identifier)
        (call_expression
          function: (identifier))))))

====================
Typed func signature
====================

do apply(f func(int, int) -> int, g func(&int)) {
    return
}

---

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type
          (func_type
            (type
              (primitive_type))
            (type
              (primitive_type))
            (type
              (primitive_type)))))
      (parameter
        name: (identifier)
        type: (type
          (func_type
            (type
              (primitive_type))))))
    (block
      (return_statement))))

================================
Map type without the map keyword
================================

do main() {
    mut ages [string:int] = {"a": 1}
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (type
          (map_type
            (type
              (primitive_type))
            (type
              (primitive_type))))
        (map_literal
          (map_entry
            (string
              (string_content))
            (number
              (integer))))))))

=====================
Module-qualified type
=====================

do main() {
    mut tasks [models.Task] = {}
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (type
          (array_type
            (type
              (qualified_type
                (identifier)
                (identifier)))))
        (array_literal)))))

============================================
Named array size and new with composite type
============================================

const arr [int, N] = {1, 2, 3}

do main() {
    mut p = new([int])
}

---

(source_file
  (variable_declaration
    (identifier)
    (type
      (array_type
        (type
          (primitive_type))
        (identifier)))
    (array_literal
      (number
        (integer))
      (number
        (integer))
      (number
        (integer))))
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (new_expression
          type: (type
            (array_type
              (type
                (primitive_type)))))))))

==============================
For loop with a bare condition
==============================

do main() {
    for i < 5 {
        i += 1
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (for_statement
        (binary_expression
          (identifier)
          (number
            (integer)))
        (block
          (assignment_statement
            (identifier)
            (number
              (integer))))))))

====================
Not-in shorthand
====================

do main() {
    if 99 !in numbers {
        println("absent")
    }
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (if_statement
        (binary_expression
          (number
            (integer))
          (identifier))
        (block
          (expression_statement
            (call_expression
              function: (identifier)
              (string
                (string_content)))))))))

=========================================
Trailing commas in enum and struct bodies
=========================================

const Color enum {
    RED,
    GREEN = 2,
}

const P struct {
    x int,
    y int,
}

---

(source_file
  (enum_declaration
    name: (identifier)
    (enum_value
      (identifier))
    (enum_value
      (identifier)
      (number
        (integer))))
  (struct_declaration
    name: (identifier)
    (field_declaration
      name: (identifier)
      type: (type
        (primitive_type)))
    (field_declaration
      name: (identifier)
      type: (type
        (primitive_type)))))

==========================================
Comment markers and escapes inside strings
==========================================

do main() {
    mut p string = io.dirname("///")
    mut r string = `a//b`
    println("literal \${x}")
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (variable_declaration
        (identifier)
        (type
          (primitive_type))
        (call_expression
          function: (member_expression
            (identifier)
            property: (identifier))
          (string
            (string_content))))
      (variable_declaration
        (identifier)
        (type
          (primitive_type))
        (raw_string))
      (expression_statement
        (call_expression
          function: (identifier)
          (string
            (string_content)
            (escape_sequence)
            (string_content)))))))

==============================
Keyword-less variable declaration
==============================

count int = 0
mut a, b int = 1, 2

---

(source_file
  (variable_declaration
    (identifier)
    (type
      (primitive_type))
    (number
      (integer)))
  (variable_declaration
    (identifier)
    (identifier)
    (type
      (primitive_type))
    (number
      (integer))
    (number
      (integer))))

==============================
Alias dialect: fn, switch, case, defer
==============================

fn main() {
    switch x {
        case 1 { println("a") }
        default { println("b") }
    }
    defer cleanup()
}

---

(source_file
  (function_declaration
    name: (identifier)
    (block
      (when_statement
        (identifier)
        (is_clause
          (number
            (integer))
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (string
                  (string_content))))))
        (default_clause
          (block
            (expression_statement
              (call_expression
                function: (identifier)
                (string
                  (string_content)))))))
      (ensure_statement
        (call_expression
          function: (identifier))))))

==============================
Single-line attribute container
==============================

#[doc("x"), deprecated]
fn old() -> int {
    return 0
}

---

(source_file
  (function_declaration
    (attribute_list
      name: (identifier)
      (string
        (string_content))
      name: (identifier))
    name: (identifier)
    (return_types
      (type
        (primitive_type)))
    (block
      (return_statement
        (number
          (integer))))))
